# fastapi-ci-demo

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
