[tool.poetry]
name = "fastapi-ci-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=50"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["B008"]  # FastAPI uses function calls in default args

[tool.ruff.lint.isort]
known-first-party = ["app"]
